Mod, FCS, getting a better build config integrated into the boilerplate